--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'Open Sans';
-  src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff");
+  src: url(../fonts/OpenSans-Regular.woff);
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff");
+  src: url(../fonts/OpenSans-Bold.woff);
   font-weight: 700;
   font-style: normal;
 }
@@ -22,7 +22,7 @@ position: relative;
 display: block;
 box-sizing: border-box;
 background-color: gray;
-background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg");
+background-image: url("../images/banner-bg.jpg");
 background-size: cover;
 margin-right: auto;
 margin-left: auto;
@@ -109,7 +109,15 @@ z-index: 2;
 position: relative;
 }
 
+.trend-container {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.trend-part {
+  box-sizing: border-box;
+}
 
 .page {
 display: flex;
@@ -286,6 +294,7 @@ margin: 0;
 font-size: 14px;
 line-height: 1.28;
 text-transform: uppercase;
+font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .posts-header-link {
@@ -369,7 +378,7 @@ color: #ffffff;
 cursor: pointer;
 margin-left: 0px;
 background-color: #b59f5b;
-background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg");
+background-image: url(../svg/search.svg);
 background-repeat: no-repeat;
 background-position: center center;
 background-size: 18px;
@@ -574,23 +583,23 @@ background-position: center;
 
 .icon-twitter {
 background-size: 25px;
-background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/004-twitter.svg"); 
+background-image: url(../svg/004-twitter.svg); 
 }
 
 .icon-pinterest {
-background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/001-pinterest.svg");
+background-image: url(../svg/001-pinterest.svg);
 }
 
 .icon-facebook {
-background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/002-facebook-logo.svg");
+background-image: url(../svg/002-facebook-logo.svg);
 }
 
 .icon-instagram {
- background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/005-instagram.svg");
+ background-image: url(../svg/005-instagram.svg);
 }
 
 .icon-tumblr {
- background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/003-tumblr.svg");
+ background-image: url(../svg/003-tumblr.svg);
 }
 
 .copyright {
