--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,11 @@
 }
 
 body {
-    width: 1660px;
+    width: 100%;
     min-width: 360px;
     font-family: 'Open Sans', sans-serif;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 * {
@@ -33,7 +35,6 @@ body {
     background-size: cover;
     margin-right: auto;
     margin-left: auto;
-    font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .header::after {
@@ -127,7 +128,7 @@ body {
 }
 
 .trend-img {
-    width: 411px;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
@@ -614,8 +615,8 @@ body {
     box-sizing: border-box;
     position: absolute;
     padding: 47px 25px 65px;
-    top: 250px;
-    left: -28px;
+    top: 170px;
+    left: -20px;
     border: 3px solid #b59f5b;
 }
 
