--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,13 @@
     font-style: normal;
 }
 
+html {
+    font-size: 10px;
+}
+
 body {
     width: 100%;
-    min-width: 360px;
+    min-width: 36rem;
     font-family: 'Open Sans', sans-serif;
     margin-left: auto;
     margin-right: auto;
@@ -50,16 +54,16 @@ body {
 }
 
 .header-logo {
-    width: 178px;
+    width: 17.8rem;
 }
 
 .container {
     box-sizing: border-box;
     display: flex;
-    width: 1200px;
+    width: 120rem;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 30px;
+    padding-top: 3rem;
     justify-content: space-between;
     align-items: center;
     z-index: 2;
@@ -75,35 +79,34 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     color: white;
-    font-size: 13px;
+    font-size: 1.3rem;
     font-weight: normal;
 }
 
 .menu-list-item {}
 
 .menu-list-item:nth-child(n+2) {
-    margin-left: 35px;
+    margin-left: 3.5rem;
 }
 
 .menu-link:hover {
-    /*  text-decoration: underline;*/
     border-bottom: 1px solid white;
 }
 
 .title {
     font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 45px;
+    font-size: 4.5rem;
     line-height: 1.66;
     font-weight: 700;
     text-transform: uppercase;
     color: white;
-    padding-bottom: 130px;
-    margin-top: 100px;
+    padding-bottom: 13rem;
+    margin-top: 10rem;
 }
 
 .container-title {
     box-sizing: border-box;
-    width: 680px;
+    width: 68rem;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -112,7 +115,7 @@ body {
 }
 
 .trend {
-    margin-top: 60px;
+    margin-top: 6rem;
 }
 
 .trend-container {
@@ -123,7 +126,8 @@ body {
 
 .trend-part {
     box-sizing: border-box;
-    width: calc(25% - 4px);
+    width: calc(25% - 0.4rem);
+    height: 32rem;
     position: relative;
 }
 
@@ -134,7 +138,7 @@ body {
 }
 
 .trend-part:nth-child(n+2) {
-    margin-left: 4px;
+    margin-left: 0.4rem;
 }
 
 .posts-header-container {
@@ -142,21 +146,21 @@ body {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    padding-bottom: 10px;
-    margin-bottom: 25px;
+    padding-bottom: 1rem;
+    margin-bottom: 2.5rem;
 }
 
 .posts-header-container::after {
     content: "";
     display: inline-block;
-    width: 65px;
-    height: 3px;
+    width: 6.5rem;
+    height: 0.3rem;
     background-color: #e1d9bd;
     background-position: center center;
 }
 
 .posts-header {
-    font-size: 14px;
+    font-size: 1.4rem;
     line-height: 1.28;
     text-transform: uppercase;
     font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -164,12 +168,11 @@ body {
 
 .trend-content {
     box-sizing: border-box;
-    display: flex;
     position: absolute;
-    width: 92%;
-    padding: 35px;
-    bottom: 15px;
-    left: 15px;
+    padding: 3.5rem;
+    bottom: 1.5rem;
+    left: 1.5rem;
+    right: 1.5rem;
     border: 3px solid #b59f5b;
     z-index: 2;
 }
@@ -194,7 +197,7 @@ body {
     line-height: 1.2;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 2rem;
 }
 
 .trend-title-link {
@@ -206,16 +209,16 @@ body {
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
-    width: 1200px;
+    width: 120rem;
     font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 60px;
+    margin-top: 6rem;
     margin-left: auto;
     margin-right: auto;
 }
 
 .news {
     box-sizing: border-box;
-    width: 790px;
+    width: 79rem;
 }
 
 .card {
@@ -225,54 +228,54 @@ body {
 }
 
 .card-img {
-    width: 380px;
+    width: 38rem;
 }
 
 .card:nth-child(n+2) {
-    margin-top: 60px;
+    margin-top: 6rem;
 }
 
 .card-time {
-    font-size: 12px;
+    font-size: 1.2rem;
     color: #888888;
     line-height: normal;
-    margin-top: 4px;
+    margin-top: 0.4rem;
 }
 
 .adress-container {
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 .autor {
-    padding-left: 10px;
+    padding-left: 1rem;
     font-style: normal;
 }
 
 .autor-link {
     text-decoration: none;
-    font-size: 12px;
+    font-size: 1.2rem;
     font-weight: 700;
     color: black;
 }
 
 .card-content {
     box-sizing: border-box;
-    width: 380px;
-    margin-left: 30px;
-    margin-top: -6px;
+    width: 38rem;
+    margin-left: 3rem;
+    margin-top: -0.6rem;
 }
 
 .category-list {
     display: flex;
     flex-wrap: wrap;
-    width: 365px;
+    width: 36.5rem;
     text-align: left;
     list-style-type: none;
     margin-top: 0;
-    margin-bottom: 7px;
+    margin-bottom: 0.7rem;
 }
 
 .category-link {
@@ -280,16 +283,15 @@ body {
     text-transform: uppercase;
     color: #b59f5b;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 1.4rem;
 }
 
 .category-link:hover {
-    /*  text-decoration: underline;*/
     border-bottom: 1px solid #b59f5b;
 }
 
 .category-list-item {
-    margin-right: 20px;
+    margin-right: 2rem;
 }
 
 .category-list-item:last-child {
@@ -301,10 +303,10 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     color: black;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: bold;
     margin-top: 0;
-    margin-bottom: 25px;
+    margin-bottom: 2.5rem;
 }
 
 .news-title-link {
@@ -317,19 +319,19 @@ body {
 }
 
 .content {
-    font-size: 15px;
+    font-size: 1.5rem;
     line-height: 1.45;
-    margin-top: 45px;
+    margin-top: 4.5rem;
 }
 
 .posts {
     box-sizing: border-box;
-    width: 270px;
-    margin-left: 140px;
+    width: 27rem;
+    margin-left: 14rem;
 }
 
 .post-img {
-    width: 70px;
+    width: 7rem;
 }
 
 .post-card {
@@ -339,19 +341,19 @@ body {
 }
 
 .post-card:nth-child(n+2) {
-    margin-top: 20px;
+    margin-top: 2rem;
 }
 
 .post-list {
     display: block;
     box-sizing: border-box;
-    width: 185px;
-    margin-top: -6px;
-    margin-left: 15px;
+    width: 18.5rem;
+    margin-top: -0.6rem;
+    margin-left: 1.5rem;
 }
 
 .posts-header-link {
-    font-size: 14px;
+    font-size: 1.4rem;
     text-decoration: none;
     text-transform: uppercase;
     color: black;
@@ -365,22 +367,22 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    margin-top: 60px;
+    margin-top: 6rem;
     padding: 0;
 }
 
 .form-group {
-    width: calc(100% - 50px);
+    width: calc(100% - 5rem);
 }
 
 .field {
     box-sizing: border-box;
     border: none;
-    padding: 15px 35px 15px 17px;
+    padding: 1.5rem 3.5rem 1.5rem 1.7rem;
     margin-top: 0px;
     margin-right: 0;
-    font-size: 13px;
-    height: 50px;
+    font-size: 1.3rem;
+    height: 5rem;
     background-color: #f3f7f5;
     background-size: 100%;
 }
@@ -419,32 +421,32 @@ body {
 
 .button-search {
     box-sizing: border-box;
-    height: 50px;
-    width: 50px;
+    height: 5rem;
+    width: 5rem;
     padding: 0;
-    margin-top: 0px;
+    margin-top: 0;
     border: none;
-    font-size: 8px;
+    font-size: 0.8rem;
     color: #ffffff;
     cursor: pointer;
-    margin-left: 0px;
+    margin-left: 0;
     background-color: #b59f5b;
     background-image: url(../svg/search.svg);
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 18px;
+    background-size: 1.8rem;
 }
 
 .posts-container {}
 
 .subscription-container {
-    margin-top: 60px;
+    margin-top: 6rem;
 }
 
 .subscription {
     display: block;
     box-sizing: border-box;
-    margin-top: 10px;
+    margin-top: 1rem;
     padding: 0;
 }
 
@@ -453,18 +455,18 @@ body {
     box-sizing: border-box;
     width: 100%;
     border: none;
-    padding: 15px 85px 15px 17px;
-    margin-top: 10px;
+    padding: 1.5rem 8.5rem 1.5rem 1.7rem;
+    margin-top: 1rem;
     margin-right: 0;
-    font-size: 13px;
-    height: 50px;
+    font-size: 1.3rem;
+    height: 5rem;
     background-color: #f3f7f5;
     background-size: 100%;
 }
 
 .visually-hidden {
     display: block;
-    font-size: 14px;
+    font-size: 1.4px;
     font-weight: 700;
     margin-bottom: 12px;
     width: 1px;
@@ -476,29 +478,29 @@ body {
 .button-mail {
     display: block;
     box-sizing: border-box;
-    margin-top: 20px;
-    margin-right: 20px;
+    margin-top: 2rem;
+    margin-right: 2rem;
     width: 100%;
-    height: 50px;
+    height: 5rem;
     border: none;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 1.4rem;
     color: #ffffff;
     cursor: pointer;
-    margin-left: 0px;
+    margin-left: 0;
     background-color: #b59f5b;
 }
 
 .tegs {
     display: block;
     box-sizing: border-box;
-    margin-top: 60px;
+    margin-top: 6rem;
 }
 
 .posts-header-container {}
 
 .tegs-list-container {
-    margin-top: 5px;
+    margin-top: 0.5rem;
 }
 
 .tegs-list {
@@ -512,38 +514,38 @@ body {
 
 .tegs-list-item {
     display: flex;
-    border: 3px solid #e3e2df;
-    padding: 4px 12px 6px 12px;
+    border: 0.3rem solid #e3e2df;
+    padding: 0.4rem 1.2rem 0.6rem 1.2rem;
 }
 
 .tegs-list-item:hover {
-    border: 3px solid #b59f5b;
+    border: 0.3rem solid #b59f5b;
 }
 
 .tegs-list-link {
     text-decoration: none;
     color: black;
-    font-size: 12px;
+    font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
 }
 
 .tegs-list-item:nth-child(n+4) {
-    margin-top: 6px;
+    margin-top: 0.6rem;
 }
 
 .tegs-list-item:nth-child(3n+2) {
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-left: 0.6rem;
+    margin-right: 0.6rem;
 }
 
 .topics {
-    margin-top: 40px;
+    margin-top: 4rem;
 }
 
 .topics-list {
     display: block;
-    width: 270px;
+    width: 27rem;
     list-style-type: none;
     padding-left: 0;
     margin-top: 0;
@@ -556,9 +558,9 @@ body {
 
 .topics-list-item {
     border-bottom: 1px solid #e3e2df;
-    padding-bottom: 12px;
-    padding-top: 13px;
-    font-size: 14px;
+    padding-bottom: 1.2rem;
+    padding-top: 1.3rem;
+    font-size: 1.4rem;
     font-weight: bold;
 }
 
@@ -567,21 +569,21 @@ body {
 }
 
 .prefics {
-    font-size: 12px;
+    font-size: 1.2rem;
     font-weight: bold;
     color: #b59f5b;
-    margin-left: 4px;
+    margin-left: 0.4rem;
     vertical-align: super;
 }
 
 .shop {
     width: 100%;
-    margin-top: 60px;
-    margin-bottom: 200px;
+    margin-top: 6rem;
+    margin-bottom: 22rem;
 }
 
 .shop-header {
-    font-size: 20px;
+    font-size: 2rem;
     line-height: 1.28;
     text-transform: uppercase;
     font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -601,7 +603,7 @@ body {
     line-height: 1.2;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 2rem;
 }
 
 .shop-title-link {
@@ -610,18 +612,18 @@ body {
 }
 
 .content-container {
-    width: 340px;
-    height: 260px;
+    height: 26rem;
     box-sizing: border-box;
     position: absolute;
-    padding: 47px 25px 65px;
-    top: 170px;
-    left: -20px;
-    border: 3px solid #b59f5b;
+    padding: 4.7rem 2.5rem 6.5rem;
+    top: 17rem;
+    left: -2rem;
+    right: -2rem;
+    border: 0.3rem solid #b59f5b;
 }
 
 .shop-description {
-    font-size: 14px;
+    font-size: 1.4rem;
 }
 
 .text-link {
@@ -633,7 +635,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    margin-top: 30px;
+    margin-top: 3rem;
 }
 
 .shop-prices {}
@@ -641,22 +643,22 @@ body {
 .shop-price {
     display: block;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 2rem;
 }
 
 .old-price {
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 700;
     text-decoration: line-through;
 }
 
 .shop-button {
-    width: 140px;
-    height: 50px;
+    width: 14rem;
+    height: 5rem;
     background-color: #b59f5b;
     border: none;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 1.4rem;
     color: #ffffff;
     cursor: pointer;
 }
@@ -668,8 +670,8 @@ body {
 .footer {
     box-sizing: border-box;
     text-align: center;
-    margin-top: 60px;
-    width: 1200px;
+    margin-top: 6rem;
+    width: 120rem;
     margin-left: auto;
     margin-right: auto;
 }
@@ -679,8 +681,8 @@ body {
     justify-content: center;
     list-style-type: none;
     background-color: #F3F7F6;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
 
 .icon {
@@ -693,8 +695,8 @@ body {
 
 .icon-item {
     display: inline-block;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 
 .icon-link {
@@ -705,15 +707,15 @@ body {
 }
 
 .icon {
-    width: 35px;
-    height: 35px;
+    width: 3.5rem;
+    height: 3.5rem;
     background-repeat: no-repeat;
-    background-size: 20px;
+    background-size: 2rem;
     background-position: center;
 }
 
 .icon-twitter {
-    background-size: 25px;
+    background-size: 2.5rem;
     background-image: url(../svg/004-twitter.svg);
 }
 
@@ -735,10 +737,10 @@ body {
 
 .copyright {
     color: #999999;
-    font-size: 12px;
+    font-size: 1.2rem;
     font-weight: bold;
-    margin-top: 70px;
-    margin-bottom: 40px;
+    margin-top: 7rem;
+    margin-bottom: 4rem;
     text-align: center;
 }
 
@@ -747,6 +749,20 @@ body {
     text-decoration: none;
     color: #999999;
     font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
+    font-size: 1.2rem;
     font-weight: bold;
+}
+
+@media (min-width: 641px) and (max-width: 1200px) {
+    html {
+        font-size: 9px;
+    }
+    .trend-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .trend-part {
+        width: calc(50% - 0.4rem);
+        height: 27.2rem;
+    }
 }
