--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ body {
     position: relative;
 }
 
+.menu-button {
+    display: none;
+}
+
 .menu-list {
     display: flex;
     list-style-type: none;
@@ -753,16 +757,65 @@ body {
     font-weight: bold;
 }
 
-@media (min-width: 641px) and (max-width: 1200px) {
+@media (min-width: 641px) and (max-width: 1200px) and (orientation: portrait) {
     html {
         font-size: 9px;
     }
+    .menu-list {
+        display: none;
+    }
+    .menu-button {
+        width: 1.4em;
+        height: 1em;
+        border: none;
+        padding: 0;
+        background-color: transparent;
+        font-size: 25px;
+        position: relative;
+        text-indent: -9999px;
+        cursor: pointer;
+    }
+    .menu__button:before,
+    .menu__button:after {
+        content: "";
+        width: 100%;
+        height: 20%;
+        border-radius: 5px;
+        background-color: #ffffff;
+        position: absolute;
+        left: 0;
+    }
     .trend-container {
         display: flex;
+        flex: 1;
         flex-wrap: wrap;
     }
     .trend-part {
         width: calc(50% - 0.4rem);
-        height: 27.2rem;
+    }
+    .trend-part:nth-child(n+2) {
+        margin-left: 0;
+    }
+    .trend-part:nth-child(2n) {
+        margin-left: 0.4rem;
+    }
+    .trend-part:nth-child(n+3) {
+        margin-top: 0.4rem;
+    }
+    .page {
+        width: 85rem;
+        align-items: flex-start;
+    }
+    .card {
+        display: block;
+        margin-left: 0;
+        margin-top: 0.6rem;
+    }
+    .card-content {
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: 0.6rem;
     }
 }
+
+@media (min-width: 641px) and (max-width: 1200px) and (orientation: landscape) {}
