--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,6 @@ body {
     position: relative;
 }
 
-.menu-button {
-    display: none;
-}
-
 .menu-list {
     display: flex;
     list-style-type: none;
@@ -222,7 +218,7 @@ body {
 
 .news {
     box-sizing: border-box;
-    width: 79rem;
+    width: auto;
 }
 
 .card {
@@ -583,7 +579,7 @@ body {
 .shop {
     width: 100%;
     margin-top: 6rem;
-    margin-bottom: 22rem;
+    margin-bottom: 2rem;
 }
 
 .shop-header {
@@ -600,7 +596,7 @@ body {
 }
 
 .shop-block {
-    position: relative;
+    /*   position: relative;*/
 }
 
 .shop-title {
@@ -616,14 +612,17 @@ body {
 }
 
 .content-container {
-    height: 26rem;
+    height: 22rem;
     box-sizing: border-box;
-    position: absolute;
-    padding: 4.7rem 2.5rem 6.5rem;
-    top: 17rem;
+    padding-top: 2.2rem;
+    width: 300px;
+    outline: 3px solid #b59f5b;
+    outline-offset: 20px;
+    /*    top: 17rem;
     left: -2rem;
     right: -2rem;
     border: 0.3rem solid #b59f5b;
+    position: absolute;*/
 }
 
 .shop-description {
@@ -757,26 +756,35 @@ body {
     font-weight: bold;
 }
 
+@media (min-width: 1199px) {
+    .menu-button {
+        display: none;
+    }
+}
+
 @media (min-width: 641px) and (max-width: 1200px) and (orientation: portrait) {
     html {
         font-size: 9px;
+    }
+    .container {
+        width: 100%;
     }
     .menu-list {
         display: none;
     }
     .menu-button {
-        width: 1.4em;
-        height: 1em;
+        width: 4rem;
+        height: 0.8rem;
         border: none;
         padding: 0;
-        background-color: transparent;
+        background-color: #ffffff;
         font-size: 25px;
         position: relative;
         text-indent: -9999px;
         cursor: pointer;
     }
-    .menu__button:before,
-    .menu__button:after {
+    .menu-button:before,
+    .menu-button:after {
         content: "";
         width: 100%;
         height: 20%;
@@ -784,6 +792,12 @@ body {
         background-color: #ffffff;
         position: absolute;
         left: 0;
+    }
+    .menu-button:before {
+        margin-bottom: 5px;
+    }
+    .menu-button:after {
+        margin-top: 5px;
     }
     .trend-container {
         display: flex;
@@ -803,18 +817,58 @@ body {
         margin-top: 0.4rem;
     }
     .page {
-        width: 85rem;
+        width: 77.5rem;
         align-items: flex-start;
+    }
+    .news {
+        width: 56%;
     }
     .card {
         display: block;
         margin-left: 0;
         margin-top: 0.6rem;
     }
+    .card-img {
+        width: 100%;
+    }
     .card-content {
+        width: 100%;
         margin-left: 0;
         margin-right: 0;
         margin-top: 0.6rem;
+    }
+    .posts {
+        width: 38%;
+        margin-left: 4rem;
+    }
+    .posts-list {
+        margin-left: 2rem;
+    }
+    .shop-container {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+    .shop-block {
+        margin-left: 2.5rem;
+    }
+    .shop-block:nth-child(2) {
+        margin-right: 2.5rem;
+        margin-left: 8rem;
+    }
+    .shop-block:last-child {
+        margin-top: 6rem;
+    }
+    .shop-block {
+        width: 41%;
+    }
+    .shop-img {
+        width: 100%;
+    }
+    .content-container {
+        width: 100%;
+    }
+    .footer {
+        width: 100%;
     }
 }
 
