--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
-    width: 120rem;
+    max-width: 120rem;
     font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 6rem;
     margin-left: auto;
@@ -353,7 +353,7 @@ body {
 }
 
 .posts-header-link {
-    font-size: 1.4rem;
+    font-size: 14px;
     text-decoration: none;
     text-transform: uppercase;
     color: black;
@@ -762,42 +762,53 @@ body {
     }
 }
 
-@media (min-width: 641px) and (max-width: 1200px) and (orientation: portrait) {
+@media (min-width: 641px) and (max-width: 1199px) and (orientation: portrait) {
     html {
         font-size: 9px;
     }
     .container {
-        width: 100%;
+        width: 96%;
     }
-    .menu-list {
+    .menu {
         display: none;
     }
-    .menu-button {
-        width: 4rem;
-        height: 0.8rem;
+    .menu-mobil {
+        display: block;
+        width: 3rem;
+        height: 2.5rem;
         border: none;
         padding: 0;
-        background-color: #ffffff;
-        font-size: 25px;
+        background-color: transparent;
+        margin-left: auto;
         position: relative;
-        text-indent: -9999px;
         cursor: pointer;
     }
-    .menu-button:before,
-    .menu-button:after {
-        content: "";
-        width: 100%;
-        height: 20%;
-        border-radius: 5px;
+    .menu-button {
+        display: block;
+        width: 3rem;
+        height: 0.4rem;
         background-color: #ffffff;
         position: absolute;
-        left: 0;
+        top: 1rem;
+        border: none;
     }
-    .menu-button:before {
-        margin-bottom: 5px;
+    .menu-mobil:before {
+        content: "";
+        width: 3rem;
+        height: 0.4rem;
+        display: block;
+        background-color: #ffffff;
+        position: absolute;
+        top: 0;
     }
-    .menu-button:after {
-        margin-top: 5px;
+    .menu-mobil:after {
+        content: "";
+        width: 3rem;
+        height: 0.4rem;
+        display: block;
+        background-color: #ffffff;
+        position: absolute;
+        bottom: 0;
     }
     .trend-container {
         display: flex;
