--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body {
 .container {
     box-sizing: border-box;
     display: flex;
-    width: 120rem;
+    max-width: 120rem;
     margin-left: auto;
     margin-right: auto;
     padding-top: 3rem;
@@ -762,12 +762,16 @@ body {
     }
 }
 
-@media (min-width: 641px) and (max-width: 1199px) and (orientation: portrait) {
+@media (min-width: 641px) and (max-width: 1199px) {
     html {
         font-size: 9px;
     }
+    .header {
+        width: 100%;
+        background-image: url(../images/banner-bg-tablet.jpg);
+    }
     .container {
-        width: 96%;
+        width: 90%;
     }
     .menu {
         display: none;
@@ -809,23 +813,6 @@ body {
         background-color: #ffffff;
         position: absolute;
         bottom: 0;
-    }
-    .trend-container {
-        display: flex;
-        flex: 1;
-        flex-wrap: wrap;
-    }
-    .trend-part {
-        width: calc(50% - 0.4rem);
-    }
-    .trend-part:nth-child(n+2) {
-        margin-left: 0;
-    }
-    .trend-part:nth-child(2n) {
-        margin-left: 0.4rem;
-    }
-    .trend-part:nth-child(n+3) {
-        margin-top: 0.4rem;
     }
     .page {
         width: 77.5rem;
@@ -883,7 +870,28 @@ body {
     }
 }
 
-@media (min-width: 641px) and (max-width: 1200px) and (orientation: landscape) {}
+@media (min-width: 641px) and (max-width: 1200px) and (orientation: portrait) {
+    html {
+        font-size: 9px;
+    }
+    .trend-container {
+        display: flex;
+        flex: 1;
+        flex-wrap: wrap;
+    }
+    .trend-part {
+        width: calc(50% - 0.4rem);
+    }
+    .trend-part:nth-child(n+2) {
+        margin-left: 0;
+    }
+    .trend-part:nth-child(2n) {
+        margin-left: 0.4rem;
+    }
+    .trend-part:nth-child(n+3) {
+        margin-top: 0.4rem;
+    }
+}
 
 @media (max-width: 640px) {
     .header {
@@ -913,7 +921,6 @@ body {
         padding: 0;
         background-color: transparent;
         margin-left: auto;
-        margin-right: 1.6rem;
         margin-top: 2rem;
         position: relative;
         cursor: pointer;
