--- a/css/style.css
+++ b/css/style.css
@@ -901,7 +901,7 @@ body {
     .container {
         flex-wrap: wrap;
         flex-direction: column;
-        width: 100%;
+        width: 90%;
     }
     .logo-link {
         order: 1;
@@ -964,5 +964,22 @@ body {
     }
     .trend-part {
         width: 100%;
+    }
+    .trend-part:nth-child(n+2) {
+        margin-left: 0;
+        margin-top: 0.3rem;
+    }
+    .posts {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .shop-container {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .shop-block {}
+    .footer {
+        width: 90%;
     }
 }
