--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@ body {
 .category-list {
     display: flex;
     flex-wrap: wrap;
-    width: 36.5rem;
+    width: 100%;
     text-align: left;
     list-style-type: none;
     margin-top: 0;
@@ -513,10 +513,6 @@ body {
     padding: 0.4rem 1.2rem 0.6rem 1.2rem;
     margin-bottom: 0.6rem;
     margin-right: 0.6rem;
-}
-
-.tegs-list-item:nth-child(4n) {
-    margin-right: 0;
 }
 
 .tegs-list-item:hover {
@@ -1000,6 +996,11 @@ body {
     }
     .shop-block:nth-child(n+2) {
         margin-top: 45px;
+    }
+    .shop-img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
     .footer {
         width: 90%;
